# EquilibriumSolutions

./: CMakeLists.txt
Differential Vaporization/: CMakeLists.txt  DiffVap.cpp  DiffVapEOS.cpp  repos - Shortcut.lnk
Fugacity Pure Substances/: CMakeLists.txt  FugacityCalculation.cpp
Ideal Solutions/: CMakeLists.txt  Ideal.cpp
Mixture Equilibrium EOS/: CMakeLists.txt  mixEOS.cpp
Non Ideal Solutions/: CMakeLists.txt  NonIdeal.cpp
Utilities/: CMakeLists.txt
Utilities/include/: bisection.hpp  eos.hpp  gases.hpp  idealSolutions.hpp  nonIdealSolutions.hpp
Utilities/src/: bisection.cpp  eos.cpp
